--- a/.github/workflows/deploy_cloud_run.yml
+++ b/.github/workflows/deploy_cloud_run.yml
@@ -12,11 +12,11 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      REGION: MY_REGION                     # edit here
-      PROJECT_ID: MY_PROJECT_ID             # edit here
-      REPOSITORY: MY_ARTIFACT_REPOSITORY    # edit here
-      SERVICE_ACCOUNT: MY_SERVICE_ACCOUNT   # edit here
-      SERVICE_NAME: MY_SERVICE_NAME         # edit here
+      REGION: us-central1                     # edit here
+      PROJECT_ID: annular-will-426711-e6             # edit here
+      REPOSITORY: my-container-repo    # edit here
+      SERVICE_ACCOUNT: nurbados104@gmail.com   # edit here
+      SERVICE_NAME: my-cloud-run-service         # edit here
 
     steps:
     - name: Checkout
