--- a/.github/workflows/deploy_cloud_run.yml
+++ b/.github/workflows/deploy_cloud_run.yml
@@ -16,7 +16,7 @@ jobs:
       PROJECT_ID: annular-will-426711-e6             # edit here
       REPOSITORY: my-container-repo    # edit here
       SERVICE_ACCOUNT: service-account-1@annular-will-426711-e6.iam.gserviceaccount.com   # edit here
-      SERVICE_NAME: my-cloud-run-service         # edit here
+      SERVICE_NAME: my-cloud-run-service-00003-4t8         # edit here
 
     steps:
     - name: Checkout
